--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,5 +1,13 @@
+
 body {
     background-color: black;
     text-align: center;
-    font-family: Verdana; 
+    font-family: Verdana;
+
+}
+
+h1 {
+    color: #fff !important
+    font-size: 50px;
+    font-weight: normal;
 }
