--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,13 +1,25 @@
-
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     text-align: center;
     font-family: Verdana;
 
 }
 
-h1 {
-    color: #fff !important
+
+h1.header {
     font-size: 50px;
     font-weight: normal;
+    color: rgb(255, 255, 255);
+        
 }
+h2 {
+    color: white;
+    font-size: 42px;
+    font-weight: 300;
+}
+.link--cta {
+    font-size: 16px;
+    color: aquamarine;
+
+}
+
